# omnifocus-mcp-python

./: .gitignore  CODEX_INSTALLATION.md  FASTMCP_DEVELOPMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_INTEGRATION_PATTERNS.md  PYTHON_DEVELOPMENT_GUIDE.md  README.md  REPOSITORY_SUMMARY.md  pyproject.toml  test_server.py
src/: omnifocus_server.py
